--- a/src/views/course.html
+++ b/src/views/course.html
@@ -1,63 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejercicio</title>
-    <link rel="stylesheet" href="css/main.css">
+    <title>Pseudoclases</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
-
 <body>
-    <div id="general">
-        <header id="header">
-            <h1> Mi practica</h1>
-        </header>
-        <nav id="menu">
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/contact">Contac</a></li>
-                <li><a href="/course">Curso css</a></li>
-            </ul>
-        </nav>
-        <div class="clearfix"></div>
-        <section id="conten">
-            <div class="contenbox">
-                <h2>Caja 1</h2>
-            </div>
-            <div class="contenbox">
-                <h2>Caja 2</h2>
-            </div>
-            <div class="contenbox">
-                <h2>Caja 3</h2>
-            </div>
-            <div class="contenbox">
-                <h2>Caja 4</h2>
-            </div>
-            <div class="contenbox">
-                <h2>Caja 5</h2>
-            </div>
-            <div class="contenbox">
-                <h2>Caja 6</h2>
-            </div>
-            <div class="contenbox">
-                <h2>Caja 7</h2>
-            </div>
-            <div class="contenbox">
-                <h2>Caja 8</h2>
-            </div>
-        </section>
-        <aside id=lateral>
-            <form>
-                <input type="text">
-                <input type="submit" velue="buscar">
-            </form>
-        </aside>
-        <div class="clearfix"></div>
-        <footer>
-            Ejercicio de Css
-        </footer>
-    </div>
+    <h1> Titulo de ejemplo</h1>
+    <ul> 
+        <li> Python </li>
+        <li> Javascript </li>
+        <li> Django </li>
+    </ul>
+    <a href="http://www.qubocultura.com/" id="enlase">Qubo cultura</a>
+    <input type="text">
 </body>
-
 </html>
