--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -1,79 +1,6 @@
-*{
-    margin: 0px;
-    padding: 0px;
-    text-decoration: none;
-    font-family: Verdana, Geneva, Tahoma, sans-serif
-}
+body{
+    background: #304352;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #d7d2cc, #304352);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #d7d2cc, #304352); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
-#general{
-    width: 1200px;
-    margin: 0px auto;
-    margin-top: 20px;
-    border: 1px solid black;
-}
-
-#header{
-    width: 100%;
-    text-align: center;
-    background: blue;
-}
-
-#menu{
-    background-color: #ccc;
-}
-
-#menu ul li{
-    display: block;
-    float: left;
-    padding: 10px;
-    border-left: 1px solid #ccc;
-}
-
-#menu ul li a{
-    color:rebeccapurple;
-}
-
-#menu ul li:hover{
-    color: rgh(15,118,236);
-}
-
-#menu ul li:hover a{
-    color: blue;
-}
-
-.clearfix{
-    clear: both;
-}
-
-#conten{    
-    width: 50%;
-    border: 1px solid green;
-    float: left;
-}
-
-#lateral{
-    float: left;
-    width: 30%;
-    border: 1px solid red;
-}
-
-#conten .contenbox{
-    width: 40%;
-    height: 250px;
-    background-color: purple;
-    border: 5px solid black;
-    color: white;
-    float: left;
-    margin: 10px;
-
-}
-
-footer{
-    width: 100%;
-    height: 55px;
-    line-height: 55px;
-    background: #eee;
-    text-align: center;
-    color: #444;
-    padding: 20px;
 }
